--- a/css/index.css
+++ b/css/index.css
@@ -59,8 +59,12 @@ aside {
 .enterType {
     border: 6px dotted black;
     border-radius: 5%;
-    padding-left: 130px;
-    padding-right: 130px;
+    padding-left: 100px;
+    padding-right: 100px;
     margin: 20px;
-
 }
+
+#aside {
+    padding: 20px;
+}
+
