--- a/css/choose-judge.css
+++ b/css/choose-judge.css
@@ -11,17 +11,25 @@
     background-color: rgb(182, 71, 93);
     border: 4px dotted black;
     margin: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2em;
+    box-shadow:inset;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 };
 
-/*hover doesn't work*/
+/*one hover doesn't work*/
 .playerButton:hover {
-    width: 230px;
-    width: 115px;
-    background-color:coral;
-};
+    width: 260px;
+    width: 160px;
+    background-color: rgb(173, 91, 108);
+}
 
 button:hover {
-    width: 230px;
-    width: 115px;
-    background-color:coral;
-};
+    width: 370px;
+    height: 165px;
+    background-color: rgb(173, 91, 108);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 47px 70px 0 rgba(0,0,0,0.19);
+}
+
+
+
